--- a/ui/src/app/views/navbar/navbar.scss
+++ b/ui/src/app/views/navbar/navbar.scss
@@ -299,13 +299,41 @@ nz-list-item {
 
 .searchpopup {
     width: 550px;
-    .description {
+
+  .header {
+    height: 30px;
+  }
+
+  .right {
+    float: right;
+  }
+
+  .title {
+    padding-left: 20px;
+    padding-bottom: 20px;
+  }
+
+  .item {
+    padding-left: 20px;
+    height: 65px;
+    display: flex;
+    align-items: center;
+    border-top: 1px solid grey;
+
+    .content {
+      .description {
         padding-top: 2px;
         padding-bottom: 5px;
         a {
-            color: #4183c4 !important;
+          color: #4183c4 !important;
         }
+      }
     }
+  }
+
+  i {
+    margin-right: 5px;
+  }
 }
 
 .notifpopup {
