--- a/ui/src/app/views/navbar/navbar.html
+++ b/ui/src/app/views/navbar/navbar.html
@@ -1,4 +1,4 @@
-<div id="navbar">
+<nz-header id="navbar">
     <a href="#" [routerLink]="['/']">
         <img src="assets/images/cds.png" class="item"
             title="{{'navbar_home' | translate}}" />
@@ -8,11 +8,11 @@
             {{ 'navbar_projects' | translate }}
         </a>
 
-        <button nz-dropdown [nzDropdownMenu]="bookmarks" nz-button nzType="text" [nzClickHide]="true">
+        <button nz-dropdown [nzDropdownMenu]="bookmarks" nzTrigger="click" nz-button nzType="text" [nzClickHide]="true" class="dropdown title">
             Bookmarks <i nz-icon nzType="caret-down" nzTheme="fill"></i>
         </button>
         <nz-dropdown-menu #bookmarks="nzDropdownMenu">
-            <ul nz-menu>
+            <ul nz-menu class="bookmark">
                 <ng-container *ngFor="let prj of listFavs">
                     <ng-container [ngSwitch]="prj.type">
                         <ng-container *ngSwitchCase="'workflow'">
@@ -23,16 +23,16 @@
                                         <div class="title bold">
                                             {{prj.workflow_name}}
                                         </div>
-                                        <div class="info mt">
-                                            {{'navbar_workflow_in' | translate}} {{prj.key}}
-                                        </div>
+                                    </div>
+                                    <div class="info mt">
+                                        {{'navbar_workflow_in' | translate}} {{prj.key}}
                                     </div>
                                 </a>
                             </li>
                         </ng-container>
                         <ng-container *ngSwitchCase="'application'">
                             <li nz-menu-item>
-                                <a class="item" sm-item href="#"
+                                <a class="item" href="#"
                                    [routerLink]="['project', prj.key, 'application', prj.application_name]">
                                     <div class="details">
                                         <div class="title bold">
@@ -47,7 +47,7 @@
                         </ng-container>
                         <ng-container *ngSwitchDefault>
                             <li nz-menu-item>
-                                <a class="item" sm-item href="#" [routerLink]="['project', prj.key]">
+                                <a class="item" href="#" [routerLink]="['project', prj.key]">
                                     <div class="details">
                                         <div class="title bold">
                                             {{prj.name}}
@@ -62,7 +62,7 @@
                     </ng-container>
                 </ng-container>
                 <li nz-menu-item>
-                    <a class="item" sm-item href="#" [routerLink]="['favorite']">
+                    <a class="item" href="#" [routerLink]="['favorite']">
                         {{'common_favorites_all' | translate}}
                     </a>
                 </li>
@@ -82,7 +82,7 @@
             <nz-tag *ngIf="currentAuthSummary.user.ring === 'ADMIN' && !currentAuthSummary.isAdmin()"
                     nzColor="orange">
                 Maintainer
-                <a class="detail" (click)="mfaLogin()" title="Elevate to admin"><i nz-icon nzType="key" nzTheme="outline"></i></a>
+                <a class="detail" (click)="mfaLogin()" title="Elevate to admin"><i nz-icon nzType="unlock" nzTheme="fill"></i></a>
             </nz-tag>
             <nz-tag *ngIf="currentAuthSummary.isAdmin()" nzColor="red">Admin</nz-tag>
         </div>
@@ -173,10 +173,12 @@
         </ng-template>
 
         <!-- NOTIFICATION -->
-        <div nz-popover [nzPopoverContent]="popupTemplateBroadcasts" nzPopoverTrigger="click" [nzPopoverVisible]="showNotif"
+        <div nz-popover [nzPopoverContent]="popupTemplateBroadcasts" [nzPopoverVisible]="showNotif"
             nzPopoverPlacement="bottomRight" class="icon popover">
-            <i nz-icon nzType="bell" nzTheme="fill"></i>
-            <nz-badge *ngIf="broadcasts && broadcasts.length > 0" [nzCount]="broadcasts.length" nzStandalone></nz-badge>
+            <div>
+                <i nz-icon nzType="bell" nzTheme="fill"></i>
+            </div>
+            <nz-badge *ngIf="broadcasts && broadcasts.length > 0" [nzCount]="broadcasts.length" nzStandalone [nzOffset]="[5,10]"></nz-badge>
         </div>
         <ng-template #popupTemplateBroadcasts>
             <div class="content notifpopup">
@@ -313,7 +315,7 @@
 
                 <li nz-menu-divider></li>
                 <li nz-menu-item>
-                    <nz-switch [(ngModel)]="darkActive" (ngModelChange)="changeTheme()"></nz-switch>Dark Model
+                    <nz-switch [ngModel]="darkActive" (ngModelChange)="changeTheme()"></nz-switch>Dark Model
                 </li>
 
                 <li nz-menu-divider></li>
@@ -344,4 +346,4 @@
             </nz-dropdown-menu>
         </ng-container>
     </div>
-</div>
+</nz-header>
