--- a/ui/src/app/views/navbar/navbar.scss
+++ b/ui/src/app/views/navbar/navbar.scss
@@ -1,14 +1,16 @@
 @import "../../../common";
 
 #navbar {
-  background-color: $polar_grey_0;
+  padding-left: 0;
+  background-color: $darkTheme_grey_0;
   border-radius: 0;
   height: 50px;
   display: flex;
   align-items: center;
 
-  :host-context(.night) & {
+  :host-context(.night) &, :host-context(.night){
     background-color: $darkTheme_grey_0;
+    box-shadow: none;
   }
 
   img {
@@ -45,18 +47,18 @@
     padding-right: 16px;
   }
 
+  .item.link {
+    color: white;
+  }
+
   .icon.popover {
     width: 45px;
     display: flex;
     justify-content: center;
   }
-  .head-example {
-    width: 42px;
-    height: 42px;
-    border-radius: 4px;
-    background: #eee;
-    display: inline-block;
-    vertical-align: middle;
+
+  .dropdown.title {
+    color: white;
   }
 
   nz-tag {
@@ -68,134 +70,19 @@
     margin-right: 15px;
   }
 
-
-  /*
-
-
-  i {
-    &.favorite {
-      color: $cds_favorite_color;
+  .details {
+    .ring {
+      height: 100%;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      margin: 0 20px;
     }
   }
-
-  img.item {
-    height: 50px;
-    padding: 5px 10px;
-    margin-right: 30px;
-  }
-
-  ul > li > a {
-    color: black;
-  }
-
-  nz-dropdown-menu {
-    height: 50px;
-    display: flex;
-  }
-
-  .ui.search {
-    padding-top: 6px;
-    height: 30px;
-    margin-right: 10px;
-
-    .ui.input {
-      .prompt {
-        background-color: rgba(225, 226, 229, 0.1);
-        border-color: transparent;
-        &:focus {
-          border: 1.5px solid #50cfd9;
-        }
-        color: white;
-        opacity: 1;
-      }
-      i {
-        &.search.icon {
-          opacity: 1;
-        }
-        color: white;
-        opacity: 1;
-      }
-    }
-  }
-
-  sm-select {
-    padding-top: 0px;
-    padding-bottom: 0px;
-    height: 50px;
-    display: flex;
-    align-items: center;
-  }
-
-  sm-dropdown {
-    height: 50px;
-    display: flex;
-  }
-
-  nz-menu-item a {
-    color: black;
-  }
-
-  sm-item a {
-    color: black;
-  }
-
-  .item {
-    padding-top: 0px;
-    padding-bottom: 0px;
-    color: white;
-
-
-  }
-
-  .item.link::before {
-    width: 0px;
-  }
-
-
-  .notification {
-    background-color: transparent !important;
-
-    &:focus {
-      outline-style: none;
-    }
-
-    margin-left: 10px;
-
-    i {
-      margin-right: 0px;
-    }
-
-    .label {
-      top: 0.3em;
-      left: initial;
-      bottom: initial;
-      right: 0.1em;
-      line-height: 0.5em;
-    }
-
-    .nopadding {
-      padding: 0;
-      color: white;
-
-      .menu {
-        right: -1em;
-
-        &.transition {
-          margin-top: 18px;
-        }
-      }
-    }
-  }
-
-  .theme-switch {
-    padding: 10px 16px;
-  }
-
-   */
 }
 
-a {
-  color: white;
+i {
+  color: rgba(255, 255, 255, 0.85);
 }
 
 li {
@@ -204,93 +91,29 @@ li {
   }
 }
 
-nz-switch {
-  margin-right: 10px;
-}
-
-nz-list-item {
-  width: 100%;
-
-  a {
-    width: 100%;
-  }
-  .notif {
-    width: 100%;
-    font-size: 0.8em;
-
-    &.bold {
-      font-weight: bold;
-    }
-
-    i {
-      &.check {
-        font-size: 1.5em;
-        color: black;
-        opacity: 0.3;
-
-        &:hover {
-          opacity: 1;
-        }
-      }
-    }
-
+.bookmark {
+  .details {
     .title {
-      font-size: 1.3em;
+      font-size: 1.1em;
 
       &.bold {
         font-weight: bold;
       }
-
-      &.blue {
-        color: $cds_color_teal !important;
-      }
-
-      &.orange {
-        color: $cds_color_orange !important;
-      }
-    }
-
-    .info {
-      font-size: 1em;
-      color: inherit;
-      text-decoration: underline;
-      display: block;
-
-      &.mt {
-        margin-top: 4px;
-      }
-    }
-
-    a {
-      width: 100%;
     }
   }
-}
-
-.details {
-  .ring {
-    height: 100%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    margin: 0 20px;
-  }
-
-  .title {
-    font-size: 1.1em;
-
-    &.bold {
-      font-weight: bold;
-    }
-  }
-
   .info {
     font-size: 0.8em;
 
     &.mt {
       margin-top: 4px;
+      color: $polar_grey_3;
     }
   }
+}
+
+
+nz-switch {
+  margin-right: 10px;
 }
 
 .mt5 {
@@ -325,7 +148,7 @@ nz-list-item {
         padding-top: 2px;
         padding-bottom: 5px;
         a {
-          color: #4183c4 !important;
+          color: #1890ff !important;
         }
       }
     }
@@ -338,6 +161,61 @@ nz-list-item {
 
 .notifpopup {
     width: 400px;
+    nz-list-item {
+      width: 100%;
+
+      a {
+        width: 100%;
+      }
+      .notif {
+        width: 100%;
+        font-size: 0.8em;
+
+        &.bold {
+          font-weight: bold;
+        }
+
+        i {
+          font-size: 1.5em;
+          opacity: 0.5;
+
+          &:hover {
+            opacity: 1;
+          }
+        }
+
+        .title {
+          font-size: 1.3em;
+
+          &.bold {
+            font-weight: bold;
+          }
+
+          &.blue {
+            color: $cds_color_teal !important;
+          }
+
+          &.orange {
+            color: $cds_color_orange !important;
+          }
+        }
+
+        .info {
+          font-size: 1em;
+          color: inherit;
+          text-decoration: underline;
+          display: block;
+
+          &.mt {
+            margin-top: 4px;
+          }
+        }
+
+        a {
+          width: 100%;
+        }
+      }
+    }
 }
 
 .helppopup {
